<resources>
    <string name="app_name">Rumah Makan Cilik</string>

    //splashscreen
    <string name="namaRestaurant">Rumah Makan Cilik</string>
    <string name="slogan">Lapar? Datang dan Makan!</string>

    <string name="menu">Menu</string>
    <string name="reservation">Reservation</string>
    <string name="dessert">Dessert</string>
    <string name="location">Location</string>
    <string name="recommend">Recommendation</string>

    //Menu
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>

    //Token Geolocation
    <string name="mapbox_access_token">pk.eyJ1Ijoia3Vyb2hha3UxMiIsImEiOiJja2ZrdHY5engxYzdsMnBtejFyN2sxb2xvIn0.EIkD9rXzlJM1KW2NYfMbtg</string>

    //Login Register
    <string name="inp_email">Email</string>
    <string name="inp_password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="inp_name">Your Name</string>
    <string name="inp_number">Phone Number</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">NEXT</string>
    <string name="already">Already Have an Account?</string>
    <string name="cam">Camera</string>
    <string name="search_name">Search Name</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile">UPDATE PROFILE</string>
</resources>